--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-atlas-obscura",
-  "version": "1.2.7",
+  "version": "2.0.0",
   "description": "An API Wrapper for Atlas Obscura",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,8 @@
   "author": "Jérémie Zarca <jeremie.zarca@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@sindresorhus/slugify": "^0.6.0",
-    "axios": "^0.19.0",
-    "cheerio": "^1.0.0-rc.2"
+    "@sindresorhus/slugify": "0.6.0",
+    "cheerio": "^1.0.0-rc.9",
+    "puppeteer": "^9.1.1"
   }
 }
